--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 body{
    width : 100%;
    height : 100%;
-   background-color: rgb(214, 214, 214);
-
+   background-color: rgb(228, 228, 228);
+   padding-right : 20px;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.mainGrid{
+   display: grid;
+   grid-template-columns: 75% 25%;
+   grid-template-rows: 100%;
+   grid-column-gap: 20px ;
+}
 .grid1{
    display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
-   grid-template-rows: 1fr 1fr 1fr;
+   grid-template-columns: 1fr 1fr;
+   grid-template-rows: minmax(auto 300px);
+   grid-gap: 20px;
 
 }
 .myProjectTitle{
@@ -18,9 +26,37 @@ body{
 
 .firstBox{
    display: grid;
-   grid-template-columns: 10px 1fr;
-   grid-template-rows: 100px;
+   grid-template-columns: 20px 1fr 20px;
+   grid-template-rows: minmax(100px 300px);
    background-color: rgb(255, 255, 255);
+   border-left: 10px solid;
+   border-color : yellow;
    border-radius: 10px;
-   box-shadow: 5px 10px 8px #888888;
+   box-shadow: 5px 10px 8px #adadad;
+}
+.myImages{
+   display: flex;
+   justify-content: flex-end;
+   padding : 0px 0px 20px 0px;
+   
+}
+
+.myImages img {
+   width: 20px;
+   padding: 0px 20px 0px 20px;
+}
+
+.grid2{
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-template-rows: 90px 1fr;
+   
+}
+
+.secondBox{
+   background-color: white;
+   display: grid;
+   
+   border-radius: 10px;
+   box-shadow: 5px 10px 8px #b4b4b4;
 }
