--- a/style.css
+++ b/style.css
@@ -1,44 +1,46 @@
 body{
-   width : 100%;
-   height : 100%;
-   background-color: rgb(228, 228, 228);
-   padding-right : 20px;
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   background-color: rgb(202, 202, 202);
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   margin: 20px;
+}
+
+.titleBox{
+   display: grid;
 }
 
 .mainGrid{
    display: grid;
    grid-template-columns: 75% 25%;
-   grid-template-rows: 100%;
-   grid-column-gap: 20px ;
+   grid-template-rows: 1fr;
+   grid-column-gap: 20px;
 }
+
+.firstGrid{
+   display: grid;
+   grid-template-columns:  1fr 1fr;
+   grid-gap: 20px;
+}
+
+.mainTitle1{
+   grid-column: 1/3;
+}
+
 .grid1{
    display: grid;
-   grid-template-columns: 1fr 1fr;
-   grid-template-rows: minmax(auto 300px);
-   grid-gap: 20px;
-
-}
-.myProjectTitle{
-   grid-column-start: 1;
-   grid-column-end: 3;
-}
-
-.firstBox{
-   display: grid;
-   grid-template-columns: 20px 1fr 20px;
-   grid-template-rows: minmax(100px 300px);
-   background-color: rgb(255, 255, 255);
-   border-left: 10px solid;
-   border-color : yellow;
+   grid-template-columns: 1fr;
+   grid-template-rows: 20px 1fr 20px;
+   background-color: white;
+   border-left: 15px solid;
    border-radius: 10px;
-   box-shadow: 5px 10px 8px #adadad;
+   border-color: yellow;
+   box-shadow: 5px 10px 8px rgb(173, 173, 173);
+   grid-gap: 10px;
+   padding: 30px;
 }
+
 .myImages{
    display: flex;
    justify-content: flex-end;
-   padding : 0px 0px 20px 0px;
-   
 }
 
 .myImages img {
@@ -49,14 +51,14 @@ body{
 .grid2{
    display: grid;
    grid-template-columns: 1fr;
-   grid-template-rows: 90px 1fr;
-   
+   grid-template-rows: 5px 1fr 20px;
+   background-color: white;
+   border-radius: 10px;
+   box-shadow: 5px 10px 8px rgb(173, 173, 173);
+   grid-gap: 0px;
+   padding: 30px;
 }
 
-.secondBox{
-   background-color: white;
-   display: grid;
-   
-   border-radius: 10px;
-   box-shadow: 5px 10px 8px #b4b4b4;
+.textResize{
+   font-size: 15px;
 }
