--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
 
 .titleBox{
    display: grid;
+   grid-template-columns: 75% 1fr;
+   grid-template-rows: 10%;
+   grid-gap: 20px;
 }
 
 .mainGrid{
@@ -22,7 +25,7 @@ body{
 }
 
 .mainTitle1{
-   grid-column: 1/3;
+   
 }
 
 .grid1{
@@ -30,9 +33,9 @@ body{
    grid-template-columns: 1fr;
    grid-template-rows: 20px 1fr 20px;
    background-color: white;
-   border-left: 15px solid;
+   border-left: 0.5em solid;
    border-radius: 10px;
-   border-color: yellow;
+   border-color: rgb(255, 221, 28);
    box-shadow: 5px 10px 8px rgb(173, 173, 173);
    grid-gap: 10px;
    padding: 30px;
@@ -51,14 +54,35 @@ body{
 .grid2{
    display: grid;
    grid-template-columns: 1fr;
-   grid-template-rows: 5px 1fr 20px;
+   grid-template-rows: 1fr 1fr 1fr;
    background-color: white;
    border-radius: 10px;
    box-shadow: 5px 10px 8px rgb(173, 173, 173);
-   grid-gap: 0px;
+   grid-row-gap: 0px;
    padding: 30px;
+   margin-right: 20px;
 }
 
 .textResize{
    font-size: 15px;
 }
+
+.maintenance{
+   display: grid;
+   grid-template: 5px 1fr / 1fr;
+   margin-bottom: 20px;
+   border-bottom: 5px rgb(77, 77, 77);
+}
+
+.update{
+   display: grid;
+   grid-template: 5px 1fr / 1fr;
+   border-bottom: 5px rgb(77, 77, 77);
+}
+.community{
+   display: grid;
+   grid-template: 5px 1fr / 1fr;
+   margin-bottom: 20px;
+   border-bottom: 5px rgb(77, 77, 77);
+}
+
