--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
 body{
    background-color: rgb(202, 202, 202);
+}
+
+.mainContainer{
+   display: grid;
+   grid-template-columns: 15% 85%;
+   grid-template-rows: 10% 90%;
+}
+
+.dashboard{
+   display: grid;
+   grid-row: 1 / 4;
+}
+
+.mainBoard{
+   /* background-color: rgb(202, 202, 202); */
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   margin: 20px;
+   width: 100%;
+   height: 100%;
+   padding: 0px;
+   margin: 0px;
 }
 
 .titleBox{
@@ -22,6 +40,7 @@ body{
    display: grid;
    grid-template-columns:  1fr 1fr;
    grid-gap: 20px;
+   height: 100vh;
 }
 
 .mainTitle1{
@@ -60,11 +79,12 @@ body{
    box-shadow: 5px 10px 8px rgb(173, 173, 173);
    grid-row-gap: 0px;
    padding: 30px;
-   margin-right: 20px;
+   /* margin-right: 20px; */
 }
 
 .textResize{
    font-size: 15px;
+   color: rgb(109, 109, 109);
 }
 
 .maintenance{
@@ -84,5 +104,49 @@ body{
    grid-template: 5px 1fr / 1fr;
    margin-bottom: 20px;
    border-bottom: 5px rgb(77, 77, 77);
+}
+
+.secondGrid{
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-row-gap: 5px ;
+   margin-right: 40px;
+}
+.grid3{
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-template-rows: 1fr 1fr 1fr 1fr;
+   background-color: white;
+   border-radius: 10px;
+   box-shadow: 5px 10px 8px rgb(173, 173, 173);
+   grid-row-gap: 20px;
+   padding: 30px;
+   /* margin-right: 20px; */
+}
+
+.gridElement{
+   display: grid;
+   grid-template-columns: 20% 80%;
+   grid-template-rows: 10px;
+   grid-column-gap: 30px;
+   margin-right: 10px;
+}
+
+.image1{
+   width: 50px;
+   height: 50px;
+   border-radius: 50%;
+}
+
+
+
+.gridElement img {
+   grid-row : 1 / 3;
+}
+
+.alignText{
+   display: grid;
+   grid-template-rows: 10px 10px;
+   grid-row-gap: 10px ;
 }
 
