--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
-.container > header{
-display: flex;
-flex-direction: row;
-padding: 50px;
-padding-left: 20%;
-background-color: blue;
-
+body{
+    background-color: gainsboro;
+    
 }
-.container > nav{
+  .dash{
+      font-size: 20px;
+      font-weight: bold;
+      margin: 10px;
+      color: white;
+  }
+.container {
+    margin-bottom: 20px;
+    background-color: rgba(94, 161, 248, 0.76);
     display: flex;
     flex-direction: column;
-    padding: 50px;
-    background-color: rgb(19, 111, 197);
-    color: white;
-    height: 500px;
-    width: 50px;
+}
+.menu {
+    color:white;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 80px;
+    margin: 15px;
+    justify-content: space-between;
+}
+.menu1{
+    color:white;
+    display: flex;
+    flex-direction: column; 
+    margin: 15px;
+    justify-content: space-between;
 }
