--- a/style.css
+++ b/style.css
@@ -6,12 +6,18 @@ body{
 .mainContainer{
    display: grid;
    grid-template-columns: 20% 80%;
-   grid-template-rows: 10% 90%;
+   grid-template-rows: 1fr;
 }
 
 .dashboard{
    display: grid;
    grid-row: 1 / 4;
+}
+
+.secondContainer{
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-template-rows: 20% 1fr;
 }
 
 .mainBoard{
