--- a/style.css
+++ b/style.css
@@ -3,16 +3,17 @@ body{
     
 }
   .dash{
-      font-size: 20px;
+      font-size: 18px;
       font-weight: bold;
       margin: 10px;
       color: white;
   }
 .container {
-    margin-bottom: 20px;
-    background-color: rgba(94, 161, 248, 0.76);
+    background-color: rgba(13, 106, 168, 0.76);
     display: flex;
     flex-direction: column;
+    width: 20%;
+    height: 700px;
 }
 .menu {
     color:white;
@@ -20,12 +21,35 @@ body{
     flex-direction: column;
     padding-bottom: 80px;
     margin: 15px;
-    justify-content: space-between;
+    align-items: left;
+    margin-left: -3px;
+}
+.menu >span{
+    margin:10px;
+}
+.menu li{
+    list-style-type: none;
+}
+.menu a{
+    color: white;
+    text-decoration: none;
 }
 .menu1{
     color:white;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    padding-bottom: 80px;
     margin: 15px;
-    justify-content: space-between;
+    align-items: left;
+    margin-left:6px; 
+}
+.menu1 >span{
+    margin:10px;
+}
+.menu1 li{
+    list-style-type: none;
+}
+.menu1 a{
+    color: white;
+    text-decoration: none;
 }
